test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_complex_expr.draco
proc main() void : a := (1, (2,3), 4); corp;

