test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_mixed_const_var_decls.draco
int a, z = 9;

proc main() void : a := 1; corp;
